--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.3.0",
+    "react-slick": "^0.28.1",
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "sass": "^1.43.4",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
