--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "react-simple-image-slider": "^2.3.0",
     "react-slick": "^0.28.1",
+    "react-transition-group": "^4.4.2",
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
