--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@2gis/mapgl": "^1.20.1",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@reduxjs/toolkit": "^1.6.2",
