--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "2gis-maps": "^3.6.6",
     "axios": "^0.23.0",
+    "easy-yandex-s3": "^1.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
