--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@2gis/mapgl": "^1.20.1",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.62",
     "@mui/material": "^5.0.4",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "2gis-maps": "^3.6.6",
     "axios": "^0.23.0",
     "easy-yandex-s3": "^1.1.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-simple-image-slider": "^2.3.0",
     "react-slick": "^0.28.1",
