--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fancyapps/ui": "^4.0.26",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.0.4",
     "@mui/lab": "^5.0.0-alpha.62",
