--- a/src/Data/config.json
+++ b/src/Data/config.json
@@ -7,5 +7,6 @@
         {"day": "Пятница", "time": "09:00 - 20:00", "id": 5, "off": false},
         {"day": "Суббота", "time": "09:00 - 20:00", "id": 6, "off": false},
         {"day": "Воскресенье", "time": "09:00 - 19:00", "id": 7, "off": false}
-    ]
+    ],
+    "contact": {"street": "ул. Борчанинова 62", "name": "Веломаркет «Колесо»", "phone": "+7 (902) 471-37-69"}
 }
