all from config

--- a/src/Data/config.json
+++ b/src/Data/config.json
@@ -8,5 +8,6 @@
         {"day": "Суббота", "time": "09:00 - 20:00", "id": 6, "off": false},
         {"day": "Воскресенье", "time": "09:00 - 19:00", "id": 7, "off": false}
     ],
-    "contact": {"street": "ул. Борчанинова 62", "name": "Веломаркет «Колесо»", "phone": "+7 (902) 471-37-69"}
+    "contact": {"street": "ул. Борчанинова 62", "name": "Веломаркет «Колесо»", "phone": "+7 (902) 471-37-69"},
+    "delivery": {"time": "с 18:00 до 22:00", "price": "200р", "price2": "300р"}
 }
