--- a/package.json
+++ b/package.json
@@ -3,33 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@fancyapps/ui": "^4.0.26",
-    "@material-ui/core": "^4.12.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@fancyapps/ui": "^4.0.31",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.0.4",
+    "@mui/icons-material": "^5.10.6",
     "@mui/lab": "^5.0.0-alpha.62",
-    "@mui/material": "^5.0.4",
-    "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@mui/material": "^5.10.7",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
-    "easy-yandex-s3": "^1.1.6",
+    "babel-loader": "^8.2.5",
+    "easy-yandex-s3": "^1.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.20.2",
-    "react-redux": "^7.2.6",
+    "react-hook-form": "^7.36.1",
+    "react-redux": "^7.2.9",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "react-simple-image-slider": "^2.3.0",
+    "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.28.1",
-    "react-transition-group": "^4.4.2",
+    "react-transition-group": "^4.4.5",
     "react-yandex-maps": "^4.6.0",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.43.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.55.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
