contacts - sched update - css and logic

--- a/src/Data/config.json
+++ b/src/Data/config.json
@@ -6,7 +6,22 @@
         {"day": "Четверг", "time": "09:00 - 20:00", "id": 4, "off": false},
         {"day": "Пятница", "time": "09:00 - 20:00", "id": 5, "off": false},
         {"day": "Суббота", "time": "09:00 - 20:00", "id": 6, "off": false},
-        {"day": "Воскресенье", "time": "09:00 - 19:00", "id": 7, "off": false}
+        {"day": "Воскресенье", "time": "09:00 - 20:00", "id": 7, "off": false}
+    ],
+    "schedule2": [
+        {"day": "Понедельник", "time": "Выходной", "id": 1, "off": true},
+        {"day": "Вторник", "time": "09:00 - 19:00", "id": 2, "off": false},
+        {"day": "Среда", "time": "09:00 - 19:00", "id": 3, "off": false},
+        {"day": "Четверг", "time": "09:00 - 19:00", "id": 4, "off": false},
+        {"day": "Пятница", "time": "09:00 - 19:00", "id": 5, "off": false},
+        {"day": "Суббота", "time": "09:00 - 19:00", "id": 6, "off": false},
+        {"day": "Воскресенье", "time": "09:00 - 18:00", "id": 7, "off": false}
+    ],
+    "notice": [
+        {"date": 10,"text": "1 октября", "time": "до 19:00 в будние и до 18:00 в воскресенье"},
+        {"date": 12,"text": "1 декабря", "time": "до 20:00 в будние и до 19:00 в воскресенье"},
+        {"date": 3,"text": "1 марта", "time": "до 19:00 в будние и до 18:00 в воскресенье"},
+        {"date": 4,"text": "1 апреля", "time": "до 20:00 в будние и до 19:00 в воскресенье"}
     ],
     "contact": {"street": "ул. Борчанинова 62", "name": "Веломаркет «Колесо»", "phone": "+7 (902) 471-37-69"},
     "delivery": {"time": "с 18:00 до 22:00", "price": "200р", "price2": "300р"}
