npm update and add hook observer
intersection observer in card

--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fancyapps/ui": "^4.0.31",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.10.6",
+    "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.62",
-    "@mui/material": "^5.10.7",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@mui/material": "^5.10.17",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
-    "babel-loader": "^8.2.5",
+    "babel-loader": "^8.3.0",
     "easy-yandex-s3": "^1.1.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.36.1",
+    "react-hook-form": "^7.40.0",
+    "react-intersection-observer": "^9.4.1",
     "react-redux": "^7.2.9",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
@@ -29,8 +30,8 @@
     "react-transition-group": "^4.4.5",
     "react-yandex-maps": "^4.6.0",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "sass": "^1.55.0",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.56.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
