--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^7.2.9",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll-to-top": "^3.0.0",
     "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.5",
