--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.40.0",
     "react-intersection-observer": "^9.4.1",
+    "react-query": "^3.39.3",
     "react-redux": "^7.2.9",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
